--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 .all{
-    background-image: url(Baid.png);
+    background-image: url('Baid.png');
     text-align: center;
     font-size: 50%;
     border-style: hidden;
@@ -7,7 +7,7 @@
     border-radius: 10px;
     background-position: center;
     color: rgb(0, 0, 71);
-    
+ 
     
 }
 
